# plasma-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rename_names.py  test.exe.stackdump
include/: error.h  lexer.h  plasma_error.h  reader.h  tools.h
include/compiler/: ast.h  bytecode_compiler.h  lexer.h  parser.h
include/vm/: memory.h  virtual_machine.h
src/: array.cpp  ast.cpp  ast_copy.cpp  bool.cpp  bytecode.cpp  bytecode_compiler.cpp  bytes.cpp  caching.cpp  callable.cpp  construct.cpp  context.cpp  error.cpp  error_creators.cpp  execute.cpp  float.cpp  force.cpp  hash.cpp  hash_table.cpp  hashing.cpp  initialization.cpp  integer.cpp  iterator.cpp  lexer.cpp  method_call.cpp  none.cpp  object.cpp  object_creators.cpp  parser.cpp  plasma_error.cpp  reader.cpp  runtime_error.cpp  runtime_errors_initialize.cpp  string.cpp  symbols.cpp  tools.cpp  tuple.cpp  type.cpp  value.cpp  vm_io.cpp  vm_tools.cpp
test/: main.cpp
test/include/: print.h  test_lexer.h  test_parser.h  test_vm.h
test/src/: print.cpp  test_lexer.cpp  test_parser.cpp  test_vm.cpp
tests-samples/: cleanup.py
tests-samples/success/expressions/binary-expressions/: binary-expressions.pm
tests-samples/success/expressions/composites/: array.pm
tests-samples/success/expressions/generators/: generator.pm
tests-samples/success/expressions/if_unless-one-liner/: if.pm  unless.pm
tests-samples/success/expressions/index-expressions/: bytes-index.pm
tests-samples/success/expressions/literals/: floats.pm  strings.pm
tests-samples/success/statements/do_while-statement/: do-while.pm
tests-samples/success/statements/for-statement/: for.pm
tests-samples/success/statements/function-definition/: function-definition.pm
tests-samples/success/statements/if-statement/: if-statement.pm
tests-samples/success/statements/switch-statement/: switch.pm
tests-samples/success/statements/until-statement/: until-statement.pm
tests-samples/success/statements/while-statement/: while-statement.pm
